fixed spacing again

--- a/Pearl-hacks-16/css/styles2.css
+++ b/Pearl-hacks-16/css/styles2.css
@@ -45,7 +45,7 @@ a:hover, a:active {
 }
 
 .container-fluid {
-    padding: 0;
+    padding-right: 0;
     margin-right: auto;
     margin-left: auto;
 }
